# racecarx_sim

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
description/: car.sdf  car.urdf.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py  rsp.launch.py
plugins/: MyPlugin.cc
plugins/road_gen/: DashedLine.hpp  IntersectionSegment.hpp  LeftTurnSegment.hpp  Line.hpp  LineType.hpp  ParkingSegment.hpp  RightTurnSegment.hpp  RoadGen.cc  RoadMarking.hpp  RoadSegment.hpp  SolidRoadMarking.hpp  StraightSegment.hpp  Utils.hpp  road_gen.hpp
worlds/: depot.sdf
